--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "dotenv": "^16.0.2",
-    "hardhat": "^2.11.2"
+    "hardhat": "^2.11.2",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solidity-coverage": "^0.8.2"
   }
 }
